* undo some logging to hopefully get some additional failure